# gitNCurses

./: .env  CMakeLists.txt  Makefile  README.md  help.json  menus.json
src/: Dialog.cpp  Dialog.h  GitCommandHandler.cpp  GitCommandHandler.h  main.cpp
